--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "spritecutter"                 # or whatever you want to call it
+name = "sprite-cutter"                 # or whatever you want to call it
 compatibility_date = "2025-11-27"
 
 [assets]
